AP-17932: Fixed messed up columns container
Fixed a bug that showed two items in a row instead of a column.

AP-17932 (Fixed messed up columns container)

--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -1,24 +1,14 @@
-
-
 .wy-nav-content{
-    max-width: 100%; !important;
+    max-width: 100% !important;
 
 }
 .rst-content{
-    max-width: 750px !important;
-}
-.document > div:nth-child(1){
-        display: inline; !important;
-        justify-content: center;
-        align-items: center;
-
-
+    max-width: 1000px !important;
 }
 
-@media screen and (min-width: 2000px) {
-  .wy-nav-content {
-    max-width: 2000px !important;
-  }
+
+dl, ol, ul {
+    width: 100% !important;
 }
 
 dt {    
@@ -36,4 +26,4 @@ html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-co
 
 .a.reference{
     color: black !important;
-}
+
